# oop-group-project-

./: .gitignore  README.md  app.py  db.py  models.py  pyproject.toml  style.tcss
tests/: conftest.py  test_app.py  test_db.py  test_models.py
