[project]
name = "snek-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "textual>=8.2.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
    "textual-dev>=1.8.0",
    "ty>=0.0.29",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "C4", "ISC", "ICN", "RET", "SIM", "TID", "TC", "PTH", "TD",
    ]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.ty.environment]
python-version = "3.14"

[tool.ty.rules]
unresolved-import = "warn"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
